# fookie

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  LICENSE  Makefile  README.md  Transaction.fql  docker-compose.yml  fookie.ps1  fookie.sh  go.mod  go.sum  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: test.yml
charts/fookie/: Chart.yaml  values.yaml
cmd/fookie/: main.go
cmd/parser/: main.go
cmd/server/: embed_demo.go  logger.go  main.go  stats.go
cmd/worker/: embed_demo.go  main.go
demo/: compose.demo.yml  docker-compose.minimal.yml  docker-compose.yml  index.html  schema.fql
demo/handlers/: bootstrap.go  register.go  sim.go
deploy/compose/: apps-core.yml  apps.yml  observability.yml  postgres.yml  scale.yml
deploy/fleet/: README.md
docker/: Dockerfile.allinone  Dockerfile.fookie  Dockerfile.platform  Dockerfile.server  Dockerfile.worker  entrypoint.sh  fookie-entrypoint.sh  platform-entrypoint.sh
docs/: ecosystem-roadmap.md  getting-started.md  grafana-hub.md  platform-launcher.md
pkg/ast/: types.go
pkg/compiler/: filter.go  filter_test.go  sqlgen.go
pkg/events/: bus.go  bus_test.go  redis_patterns.go  room_bus.go  room_bus_test.go
pkg/graphql/: graphiql.go  graphiql.html  handler.go  inputwalker.go  operation_kind.go  resolvers.go  schema.go  subscriptions.go  types.go  where_inputs.go  (+1 more)
schemas/: payment_processing.fql  transaction.fql  user_onboarding.fql  wallet_transfer.fql
scripts/: dev-up.ps1  fookie.ps1  fookie.sh  grafana-bootstrap.sql
strip_comments/: main.go
ws/: Cargo.toml
(+83 files in other folders)
