[package]
name = "fookie-ws"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
tokio-tungstenite = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.25", features = ["aio", "tokio-comp", "connection-manager"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
anyhow = "1.0"
http = "1.1"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
strip = true
